# EntrenaSmart

./: .dockerignore  .env.docker  .env.example  .env.railway.example  .gitignore  API_SETUP.md  CLAUDE.md  DEVELOP.md  DOCKER.md  Dockerfile  Dockerfile.api  Dockerfile.bot  FRONTEND_FIX.md  POSTGRES_SETUP.md  RAILWAY_API_DEPLOY.md  RAILWAY_DATABASE_FIX.md  RAILWAY_DEPLOY.md  RAILWAY_FRONTEND_DEPLOY.md  README.md  SETUP.md  WINDOWS.md  docker-compose.yml  docker-start.ps1  docker-start.sh  docker-stop.ps1  docker-stop.sh  docker-utils.ps1  docker-utils.sh  pyproject.toml  railway.toml.example  requirements-dev.txt  requirements.txt  setup.bat  setup.ps1  setup.sh  start-backend.bat  start-backend.ps1  start-backend.sh  test_api.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/docs/: README.md  database-best-practices.md  project-structure.md  python-best-practices.md  solid-principles.md  version-control.md
backend/: __init__.py  diagnose_db.py  main.py
backend/api/: __init__.py  dependencies.py  logger.py  main.py  middleware.py  schemas.py
backend/migrations/: migrate_timestamps_to_timezone.py
deployment/: README.md
deployment/docker/: Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml
deployment/railway/: Dockerfile.api  Dockerfile.frontend  README.md
docs/: BUG_FIX_PERSISTENCIA.md  CHANGELOG.md  CHANGES_DEBUG.md  COMMIT_RESUMEN.md  DEBUG_LOGS.md  FIX_REMINDER_BOT_ACCESS.md  FIX_STATE_MACHINE.md  IMPLEMENTACION_COMPLETADA.md  PERSISTENCIA_VALIDADA.md  PLAN_CORRECCION_CONFIG_SEMANA.md  PLAN_UBICACIONES.md  RELEASE_NOTES.md  RESUMEN_FIX_COMPLETO.md  RESUMEN_FIX_FINAL.md  VERSION_1.0.0_SUMMARY.md  architecture.md  database-schema.md  fase1-resumen.md  fase2-resumen.md  fase3-resumen.md  fase4-resumen.md
frontend/: .env.example  Dockerfile  components.json  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
scripts/: test_reminder.py  test_reminder_corrected.py  test_reminder_debug.py  test_reminder_fixed.py  test_scheduler_debug.py
scripts/db/: init_db.py
src/: __init__.py  __version__.py
src/core/: __init__.py  constants.py  exceptions.py
src/handlers/: __init__.py  (+3 more)
storage/: .gitkeep
tasks/: PLAN_OPCION_B.md  todo.md
tests/: __init__.py  conftest.py  test_config_semana.py  test_config_semana_persistence.py
(+107 files in other folders)
